--- a/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
+++ b/src/main/resources/scl/pdi/billpaid/CrearGrupos.fxml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.*?>
-
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1350.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scl.pdi.billpaid.MainPanelController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="640.0" prefWidth="1350.0"
+            style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            fx:controller="scl.pdi.billpaid.MainPanelController">
     <left>
-        <VBox alignment="CENTER" prefHeight="601.0" prefWidth="160.0" style="-fx-background-color: #404040;" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" prefHeight="601.0" prefWidth="160.0" style="-fx-background-color: #404040;"
+              BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="page02" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="12.0" prefWidth="160.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Home" textAlignment="JUSTIFY">
+                <Button fx:id="page02" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="12.0"
+                        prefWidth="160.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css"
+                        text="Home" textAlignment="JUSTIFY">
                     <font>
-                        <Font name="System Bold" size="17.0" />
+                        <Font name="System Bold" size="17.0"/>
                     </font>
                     <cursor>
-                        <Cursor fx:constant="HAND" />
+                        <Cursor fx:constant="HAND"/>
                     </cursor>
                 </Button>
 
@@ -24,52 +29,67 @@
         </VBox>
     </left>
     <top>
-        <HBox alignment="CENTER_RIGHT" prefHeight="39.0" prefWidth="1360.0" style="-fx-background-color: #2b2a26;" BorderPane.alignment="CENTER">
+        <HBox alignment="CENTER_RIGHT" prefHeight="39.0" prefWidth="1360.0" style="-fx-background-color: #2b2a26;"
+              BorderPane.alignment="CENTER">
             <children>
-                <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="CREAR GRUPOS" wrappingWidth="737.13671875">
+                <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="CREAR GRUPOS"
+                      wrappingWidth="737.13671875">
                     <font>
-                        <Font name="System Bold" size="24.0" />
-                    </font></Text>
-                <Button fx:id="logout" mnemonicParsing="false" onAction="#close" prefHeight="18.0" prefWidth="74.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Log Out" textAlignment="JUSTIFY">
+                        <Font name="System Bold" size="24.0"/>
+                    </font>
+                </Text>
+                <Button fx:id="logout" mnemonicParsing="false" onAction="#close" prefHeight="18.0" prefWidth="74.0"
+                        style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Log Out"
+                        textAlignment="JUSTIFY">
                     <font>
-                        <Font name="System Bold" size="12.0" />
+                        <Font name="System Bold" size="12.0"/>
                     </font>
                     <opaqueInsets>
-                        <Insets />
+                        <Insets/>
                     </opaqueInsets>
                     <HBox.margin>
-                        <Insets right="4.0" />
+                        <Insets right="4.0"/>
                     </HBox.margin>
                     <cursor>
-                        <Cursor fx:constant="HAND" />
+                        <Cursor fx:constant="HAND"/>
                     </cursor>
                 </Button>
             </children>
             <BorderPane.margin>
-                <Insets right="5.0" />
-            </BorderPane.margin></HBox>
+                <Insets right="5.0"/>
+            </BorderPane.margin>
+        </HBox>
     </top>
     <center>
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
             <children>
-                <HBox prefHeight="108.0" prefWidth="1190.0" />
-                <HBox id="PanelPerfil" prefHeight="244.0" prefWidth="1190.0" />
-                <HBox prefHeight="254.0" prefWidth="1190.0" />
-                <AnchorPane maxHeight="887.0" maxWidth="1128.0" minHeight="600.0" minWidth="720.0" prefHeight="600.0" prefWidth="1103.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+                <HBox prefHeight="108.0" prefWidth="1190.0"/>
+                <HBox id="PanelPerfil" prefHeight="244.0" prefWidth="1190.0"/>
+                <HBox prefHeight="254.0" prefWidth="1190.0"/>
+                <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="887.0" maxWidth="1128.0" minHeight="600.0" minWidth="720.0"
+                            prefHeight="600.0" prefWidth="1103.0"
+                            xmlns="http://javafx.com/javafx/17.0.2-ea">
                     <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="539.0" layoutX="5.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="868.0" />
-                        <ListView fx:id="list_grupos" layoutX="9.0" layoutY="113.0" prefHeight="460.0" prefWidth="857.0" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8e8e8" height="548.0" layoutX="871.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="228.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="539.0" layoutX="5.0"
+                                   layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="868.0"/>
+                        <ListView fx:id="list_grupos" layoutX="9.0" layoutY="113.0" prefHeight="460.0"
+                                  prefWidth="857.0"/>
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8e8e8" height="548.0" layoutX="871.0"
+                                   layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="228.0"/>
                         <Label fx:id="lb_crearGroup" layoutX="934.0" layoutY="91.0" text="Crear Grupo">
                             <font>
-                                <Font size="14.0" />
+                                <Font size="14.0"/>
                             </font>
                         </Label>
-                        <TextField fx:id="tf_nombreGrupo" layoutX="887.0" layoutY="141.0" prefHeight="26.0" prefWidth="204.0" promptText="Nombre" />
-                        <TextField fx:id="tf_cantidadIntegrantes" layoutX="889.0" layoutY="228.0" prefHeight="26.0" prefWidth="203.0" promptText="Participantes" />
-                        <Button layoutX="934.0" layoutY="532.0" mnemonicParsing="false" text="Crear Grupo" />
-                        <TextArea fx:id="tf_descripcionGrupo" layoutX="888.0" layoutY="166.0" prefHeight="62.0" prefWidth="203.0" promptText="Descripción" />
-                        <Button fx:id="bt_eliminarGrupo" layoutX="805.0" layoutY="88.0" mnemonicParsing="false" text="Eliminar" />
+                        <TextField fx:id="tf_nombreGrupo" layoutX="887.0" layoutY="141.0" prefHeight="26.0"
+                                   prefWidth="204.0" promptText="Nombre"/>
+                        <TextField fx:id="tf_cantidadIntegrantes" layoutX="889.0" layoutY="228.0" prefHeight="26.0"
+                                   prefWidth="203.0" promptText="Participantes"/>
+                        <Button layoutX="934.0" layoutY="532.0" mnemonicParsing="false" text="Crear Grupo"/>
+                        <TextArea fx:id="tf_descripcionGrupo" layoutX="888.0" layoutY="166.0" prefHeight="62.0"
+                                  prefWidth="203.0" promptText="Descripción"/>
+                        <Button fx:id="bt_eliminarGrupo" layoutX="805.0" layoutY="88.0" mnemonicParsing="false"
+                                text="Eliminar"/>
                     </children>
                 </AnchorPane>
 
