--- a/src/main/resources/scl/pdi/billpaid/TransaccionView.fxml
+++ b/src/main/resources/scl/pdi/billpaid/TransaccionView.fxml
@@ -1,43 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.*?>
-
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="1350.0" style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scl.pdi.billpaid.TransaccionController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="640.0" prefWidth="1350.0"
+            style="-fx-background-color: grey;" xmlns="http://javafx.com/javafx/17.0.2-ea"
+            fx:controller="scl.pdi.billpaid.TransaccionController">
     <left>
-        <VBox alignment="CENTER" prefHeight="601.0" prefWidth="160.0" style="-fx-background-color: #404040;" BorderPane.alignment="CENTER">
+        <VBox alignment="CENTER" prefHeight="601.0" prefWidth="160.0" style="-fx-background-color: #404040;"
+              BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="page02" mnemonicParsing="false" onAction="#loadPage02View" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Grupos" textAlignment="JUSTIFY">
+                <Button fx:id="page02" mnemonicParsing="false" onAction="#loadPage02View" prefHeight="30.0"
+                        prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css"
+                        text="Grupos" textAlignment="JUSTIFY">
                     <font>
-                        <Font name="System Bold" size="17.0" />
+                        <Font name="System Bold" size="17.0"/>
                     </font>
                     <cursor>
-                        <Cursor fx:constant="HAND" />
+                        <Cursor fx:constant="HAND"/>
                     </cursor>
                 </Button>
-            <Button fx:id="home" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Home" textAlignment="JUSTIFY">
-               <font>
-                  <Font name="System Bold" size="17.0" />
-               </font>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-                <Button fx:id="addPurchase" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="30.0" prefWidth="189.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" textAlignment="JUSTIFY" visible="false">
+                <Button fx:id="home" layoutX="10.0" layoutY="81.0" mnemonicParsing="false" onAction="#loadHomeView"
+                        prefHeight="30.0" prefWidth="168.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt"
+                        stylesheets="@mainpanel.css" text="Home" textAlignment="JUSTIFY">
+                    <font>
+                        <Font name="System Bold" size="17.0"/>
+                    </font>
+                    <cursor>
+                        <Cursor fx:constant="HAND"/>
+                    </cursor>
+                </Button>
+                <Button fx:id="addPurchase" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="30.0"
+                        prefWidth="189.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css"
+                        textAlignment="JUSTIFY" visible="false">
                     <VBox.margin>
-                        <Insets top="10.0" />
+                        <Insets top="10.0"/>
                     </VBox.margin>
                     <font>
-                        <Font name="System Bold" size="12.0" />
+                        <Font name="System Bold" size="12.0"/>
                     </font>
                 </Button>
-                <Button fx:id="purchaseDetail" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="30.0" prefWidth="185.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" textAlignment="JUSTIFY" visible="false">
+                <Button fx:id="purchaseDetail" mnemonicParsing="false" onAction="#loadHomeView" prefHeight="30.0"
+                        prefWidth="185.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css"
+                        textAlignment="JUSTIFY" visible="false">
                     <font>
-                        <Font name="System Bold" size="12.0" />
+                        <Font name="System Bold" size="12.0"/>
                     </font>
                 </Button>
 
@@ -45,66 +56,87 @@
         </VBox>
     </left>
     <top>
-        <HBox alignment="CENTER_RIGHT" prefHeight="39.0" prefWidth="1360.0" style="-fx-background-color: #2b2a26;" BorderPane.alignment="CENTER">
+        <HBox alignment="CENTER_RIGHT" prefHeight="39.0" prefWidth="1360.0" style="-fx-background-color: #2b2a26;"
+              BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="logout" mnemonicParsing="false" onAction="#close" prefHeight="18.0" prefWidth="74.0" style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Log Out" textAlignment="JUSTIFY">
+                <Button fx:id="logout" mnemonicParsing="false" onAction="#close" prefHeight="18.0" prefWidth="74.0"
+                        style="-fx-text-fill: #f0f0f0;" styleClass="bt" stylesheets="@mainpanel.css" text="Log Out"
+                        textAlignment="JUSTIFY">
                     <font>
-                        <Font name="System Bold" size="12.0" />
+                        <Font name="System Bold" size="12.0"/>
                     </font>
                     <opaqueInsets>
-                        <Insets />
+                        <Insets/>
                     </opaqueInsets>
                     <HBox.margin>
-                        <Insets right="4.0" />
+                        <Insets right="4.0"/>
                     </HBox.margin>
                     <cursor>
-                        <Cursor fx:constant="HAND" />
+                        <Cursor fx:constant="HAND"/>
                     </cursor>
                 </Button>
             </children>
             <BorderPane.margin>
-                <Insets right="5.0" />
-            </BorderPane.margin></HBox>
+                <Insets right="5.0"/>
+            </BorderPane.margin>
+        </HBox>
     </top>
     <center>
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
             <children>
-                <HBox prefHeight="108.0" prefWidth="1190.0" />
-                <HBox id="PanelPerfil" prefHeight="244.0" prefWidth="1190.0" />
-                <HBox prefHeight="254.0" prefWidth="1190.0" />
-                <AnchorPane maxHeight="600.0" maxWidth="720.0" minHeight="600.0" minWidth="720.0" prefHeight="600.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+                <HBox prefHeight="108.0" prefWidth="1190.0"/>
+                <HBox id="PanelPerfil" prefHeight="244.0" prefWidth="1190.0"/>
+                <HBox prefHeight="254.0" prefWidth="1190.0"/>
+                <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="600.0" maxWidth="720.0" minHeight="600.0" minWidth="720.0"
+                            prefHeight="600.0" prefWidth="720.0"
+                            xmlns="http://javafx.com/javafx/17.0.2-ea">
                     <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="539.0" layoutX="5.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="868.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="539.0" layoutX="5.0"
+                                   layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="868.0"/>
                         <Label fx:id="lb_grupos" layoutX="64.0" layoutY="55.0" text="Grupo de Fiesta">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="18.0"/>
                             </font>
                         </Label>
                         <Label fx:id="lb_cantidad" layoutX="64.0" layoutY="91.0" text="000,00">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Label>
-                        <ListView fx:id="list_transacciones" layoutX="10.0" layoutY="113.0" onKeyPressed="#onEliminarTransaccionSUPR" prefHeight="443.0" prefWidth="858.0" />
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8e8e8" height="539.0" layoutX="873.0" layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="231.0" />
-                        <Label fx:id="lb_transaccion" layoutX="933.0" layoutY="83.0" text="Transacción">
                             <font>
-                                <Font size="24.0" />
+                                <Font size="14.0"/>
                             </font>
                         </Label>
-                        <TextField fx:id="tf_nombre_transaccion" layoutX="887.0" layoutY="141.0" prefHeight="26.0" prefWidth="204.0" promptText="Nombre" />
-                        <TextField fx:id="tf_cantidad" layoutX="889.0" layoutY="228.0" prefHeight="26.0" prefWidth="203.0" promptText="Cantidad" />
-                        <DatePicker fx:id="date_fecha_transaccion" layoutX="890.0" layoutY="253.0" prefHeight="26.0" prefWidth="202.0" promptText="Fecha transacción" />
-                        <TextField fx:id="tf_pagador_por" layoutX="890.0" layoutY="278.0" prefHeight="26.0" prefWidth="201.0" promptText="Pagado por" />
-                        <TextField fx:id="tf_deber_por" layoutX="890.0" layoutY="303.0" prefHeight="26.0" prefWidth="201.0" promptText="A deber por" />
-                        <Button fx:id="bt_crear" layoutX="934.0" layoutY="532.0" mnemonicParsing="false" onAction="#onCrearTransaccionButtonClick" text="Crear transacción" />
-                        <Button fx:id="bt_eliminar" layoutX="805.0" layoutY="88.0" mnemonicParsing="false" onAction="#onEliminarTransaccionClick" text="Eliminar" />
-                  <Button fx:id="bt_exportar" layoutX="657.0" layoutY="88.0" mnemonicParsing="false" onAction="#onExportarTransaccionesClick" text="Exportar Transacciones" />
-                  <Button fx:id="bt_modificar" layoutX="585.0" layoutY="88.0" mnemonicParsing="false" onAction="#onModificarTransaccionClick" text="Modificar" />
-                  <TextField fx:id="tf_descrip_trans" layoutX="887.0" layoutY="167.0" prefHeight="62.0" prefWidth="204.0" promptText="Descripción" />
-                  <Button fx:id="bt_modificar" layoutX="925.0" layoutY="506.0" mnemonicParsing="false" onAction="#onGrabarModificacionClick" text="Confirmar Modificación" visible="false" />
+                        <ListView fx:id="list_transacciones" layoutX="10.0" layoutY="113.0"
+                                  onKeyPressed="#onEliminarTransaccionSUPR" prefHeight="443.0" prefWidth="858.0"/>
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8e8e8" height="539.0" layoutX="873.0"
+                                   layoutY="28.0" stroke="BLACK" strokeType="INSIDE" width="231.0"/>
+                        <Label fx:id="lb_transaccion" layoutX="933.0" layoutY="83.0" text="Transacción">
+                            <font>
+                                <Font size="24.0"/>
+                            </font>
+                        </Label>
+                        <TextField fx:id="tf_nombre_transaccion" layoutX="887.0" layoutY="141.0" prefHeight="26.0"
+                                   prefWidth="204.0" promptText="Nombre"/>
+                        <TextField fx:id="tf_cantidad" layoutX="889.0" layoutY="228.0" prefHeight="26.0"
+                                   prefWidth="203.0" promptText="Cantidad"/>
+                        <DatePicker fx:id="date_fecha_transaccion" layoutX="890.0" layoutY="253.0" prefHeight="26.0"
+                                    prefWidth="202.0" promptText="Fecha transacción"/>
+                        <TextField fx:id="tf_pagador_por" layoutX="890.0" layoutY="278.0" prefHeight="26.0"
+                                   prefWidth="201.0" promptText="Pagado por"/>
+                        <TextField fx:id="tf_deber_por" layoutX="890.0" layoutY="303.0" prefHeight="26.0"
+                                   prefWidth="201.0" promptText="A deber por"/>
+                        <Button fx:id="bt_crear" layoutX="934.0" layoutY="532.0" mnemonicParsing="false"
+                                onAction="#onCrearTransaccionButtonClick" text="Crear transacción"/>
+                        <Button fx:id="bt_eliminar" layoutX="805.0" layoutY="88.0" mnemonicParsing="false"
+                                onAction="#onEliminarTransaccionClick" text="Eliminar"/>
+                        <Button fx:id="bt_exportar" layoutX="657.0" layoutY="88.0" mnemonicParsing="false"
+                                onAction="#onExportarTransaccionesClick" text="Exportar Transacciones"/>
+                        <Button fx:id="bt_modificar" layoutX="585.0" layoutY="88.0" mnemonicParsing="false"
+                                onAction="#onModificarTransaccionClick" text="Modificar"/>
+                        <TextField fx:id="tf_descrip_trans" layoutX="887.0" layoutY="167.0" prefHeight="62.0"
+                                   prefWidth="204.0" promptText="Descripción"/>
+                        <Button fx:id="bt_modificar" layoutX="925.0" layoutY="506.0" mnemonicParsing="false"
+                                onAction="#onGrabarModificacionClick" text="Confirmar Modificación" visible="false"/>
                     </children>
                 </AnchorPane>
-                
+
             </children>
         </VBox>
     </center>
